.jekyll-cache/Jekyll/Cache/Jekyll--Converters--Markdown/d5/fe3774e9df5f2abf2c5bba3598cee4c21cb33fff97e793c4be5edb3d8648e8
I"ô<p>æˆ‘æ‰¿è®¤ï¼Œåˆæ¬¡é‡åˆ° Dash çš„æ—¶å€™ï¼Œæˆ‘æ˜¯æƒŠè‰³çš„ã€‚</p>

<p>æ€ä¹ˆä¼šæœ‰å¦‚æ­¤æ–¹ä¾¿çš„æ–‡æ¡£æŸ¥çœ‹å·¥å…·ï¼Ÿé¡¿æ—¶è§‰å¾—è¢«å„ç§åŠ è½½å¥‡æ…¢çš„ API æ–‡æ¡£å‘è‹¦äº†å¥½å¤šå¹´ï¼äºæ˜¯å¾ˆå¼€å¿ƒåœ°ä¸‹è½½äº†æˆ‘å¸¸ç”¨çš„ API æ–‡æ¡£ï¼Œå¹¶ä¸”æ‰¾åˆ°äº†å®ƒåœ¨ Windows ä¸‹çš„æ›¿ä»£å“ Zeal æ¨èç»™æœ‹å‹ä»¬ï¼Œæ„Ÿè§‰ä¸–ç•Œä»æ­¤ç¾å¥½äº†è®¸å¤šã€‚</p>

<p>å¯æƒœå¥½æ™¯ä¸é•¿ã€‚</p>

<p><img src="/images/posts/mac/dash-wait.png" alt="" /></p>

<p>ç•…å¿«åœ°æŸ¥è¯¢å‡ æ¬¡ä¹‹åå°±ç»å¸¸çœ‹åˆ°è¿™ä¸ªç­‰å¾…çš„ç•Œé¢äº†ï¼Œæç¤º <code class="language-plaintext highlighter-rouge">Please Purchase to Skip Waiting. The page will load in 8 seconds.</code>ï¼Œç”¨å®ƒå°±æ˜¯ä¸ºäº†æå‡æŸ¥è¯¢æ•ˆç‡çš„ï¼Œå¹´è½»çš„ç”Ÿå‘½ç¦ä¸èµ·è¿™æ ·çš„ç­‰å¾…ã€‚</p>

<p>è´­ä¹° Dash æ˜¯ $24.99ï¼Œä¸èƒ½ç®—è´µï¼Œä¸è¿‡æƒ³èµ·äº†å®ƒæœ‰ä¸ªå…è´¹å¼€æºã€ç•Œé¢é”‰ä¸€ç‚¹ä½†æ˜¯å¤Ÿç”¨çš„å…„å¼Ÿ Zealï¼Œè¿˜æ˜¯å†³å®šçœä¸‹è¿™äº›é’±å»åƒé¡¿å¥½åƒçš„ã€‚</p>

<h2 id="ä¸‹è½½åœ°å€">ä¸‹è½½åœ°å€</h2>

<p>æˆ‘åœ¨æœ¬æœºç¼–è¯‘åšçš„ dmg æ–‡ä»¶æˆ‘ä¸Šä¼ åˆ°äº†ç™¾åº¦ç½‘ç›˜ï¼Œä¸æƒ³æŠ˜è…¾çš„åŒå­¦å¯ä»¥ç›´æ¥ä¸‹è½½æ‹¿èµ°ã€‚</p>

<p>ä¸‹è½½åœ°å€ï¼š<a href="http://pan.baidu.com/s/1boqExRp">Zeal-for-Mac-OSX.dmg</a></p>

<p>æ‰“å¼€åå°† Zeal.app æ‹–åˆ°ã€Œåº”ç”¨ç¨‹åºã€æ–‡ä»¶å¤¹å°±è¡Œäº†ã€‚</p>

<h2 id="ç¼–è¯‘-zeal">ç¼–è¯‘ Zeal</h2>

<p>Zeal çš„æºç åœ¨ <a href="https://github.com/zealdocs/zeal">zealdocs/zeal</a>ï¼Œç¼–è¯‘æ–¹æ³•åœ¨ README çš„ <a href="https://github.com/zealdocs/zeal#how-to-compile">How to compile</a> ä¸€èŠ‚ã€‚</p>

<p>ç¼–è¯‘çš„æ­¥éª¤æˆ‘å‚è€ƒäº† <a href="http://www.hjue.me/post/compile-zear-on-mac-os-x">Compile Zeal on Mac OS X</a>ï¼Œä¸è¿‡ç°åœ¨æƒ…å†µè·Ÿä»–é‚£æ—¶å€™æœ‰äº†ä¸€äº›å˜åŒ–ï¼Œè‡³å°‘ä»æˆ‘è¿™é‡Œç¼–è¯‘çš„æƒ…å†µæ¥çœ‹ Mac OS X ä¸‹å¯ä»¥ä¸éœ€è¦å†å®‰è£… X11ï¼Œè€Œæºç ç›´æ¥ qmake å’Œ make ç¼–è¯‘é€šä¸è¿‡äº†ã€‚</p>

<p>å¦‚ä¸‹æ˜¯ç¼–è¯‘æ­¥éª¤ï¼š</p>

<ol>
  <li>
    <p>å®‰è£…æœ€æ–°ç‰ˆ Qtï¼Œå®˜æ–¹æ–‡æ¡£æ¨èçš„æ˜¯ v5.2.0+ï¼Œæˆ‘å®‰è£…çš„æ˜¯ v5.5ã€‚</p>

    <p>ä¸‹è½½åœ°å€ï¼š<a href="http://www.qt.io/download-open-source/">http://www.qt.io/download-open-source/</a></p>
  </li>
  <li>
    <p>å®‰è£… libarchiveã€‚</p>

    <div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>brew install libarchive
</code></pre></div>    </div>
  </li>
  <li>
    <p>ä¸‹è½½æºç ã€‚</p>

    <div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>git clone git@github.com:zealdocs/zeal.git
</code></pre></div>    </div>
  </li>
  <li>ç¼–è¯‘ã€‚
    <ul>
      <li>ä½¿ç”¨ Qt Creator æ‰“å¼€æºç ä¸‹çš„ zeal.pro æ–‡ä»¶ï¼Œç‚¹å‡»ã€Œé¡¹ç›®ã€æ ‡ç­¾ï¼Œå°†æ„å»ºè®¾ç½®é‡Œçš„ã€Œç¼–è¾‘æ„å»ºé…ç½®ã€æ”¹ä¸º Releaseã€‚</li>
      <li>
        <p>æ‰“å¼€ src/core/core.pri æ–‡ä»¶ï¼Œåœ¨æœ€åæ·»åŠ å¦‚ä¸‹å†…å®¹ï¼ˆéœ€è¦å°†è·¯å¾„æ›¿æ¢ä¸ºä½ çš„æœºå™¨ä¸Š libarchive çš„å¯¹åº”å®Œæ•´è·¯å¾„ï¼‰ï¼š</p>

        <div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>macx: {
    INCLUDEPATH += /usr/local/Cellar/libarchive/3.1.2/include
    LIBS += -L/usr/local/Cellar/libarchive/3.1.2/lib -larchive
}
</code></pre></div>        </div>
      </li>
      <li>
        <p>Qt Creator é‡Œçš„èœå•é¡¹ ã€Œæ„å»ºã€â€”â€”ã€Œæ„å»ºæ‰€æœ‰é¡¹ç›®ã€ã€‚</p>

        <p>å¦‚æœç¼–è¯‘ä¸æŠ¥é”™ï¼Œåœ¨ä½ çš„ã€Œé¡¹ç›®ã€æ ‡ç­¾é‡Œçš„ã€Œæ„å»ºç›®å½•ã€é‡Œå¡«å†™çš„ç›®å½•ä¸‹çš„ bin å­ç›®å½•é‡Œåº”è¯¥æœ‰ Zeal.app äº†ã€‚</p>
      </li>
    </ul>
  </li>
  <li>
    <p>ç”Ÿæˆå®‰è£…åŒ…ã€‚</p>

    <p>ä½¿ç”¨ Terminal è¿›å…¥ Zeal.app æ‰€åœ¨ç›®å½•ï¼Œè¿è¡Œå¦‚ä¸‹å‘½ä»¤ç”Ÿæˆ Zeal.dmg æ–‡ä»¶ï¼š</p>

    <div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>macdeployqt Zeal.app -dmg
</code></pre></div>    </div>

    <p>macdeployqt å‘½ä»¤åœ¨ Qt å®‰è£…ç›®å½•ä¸‹èƒ½æ‰¾åˆ°ï¼Œæ¯”å¦‚æˆ‘çš„è¿™ä¸ªå‘½ä»¤åœ¨ /Users/mazhuang/Qt5.5.0/5.5/clang_64/bin ç›®å½•ä¸‹ã€‚</p>
  </li>
</ol>

<h2 id="ä½¿ç”¨æˆªå›¾">ä½¿ç”¨æˆªå›¾</h2>

<p><img src="/images/posts/mac/zeal-for-mac.png" alt="zeal-for-mac" /></p>

<h2 id="é‡åˆ°è¿‡çš„é—®é¢˜">é‡åˆ°è¿‡çš„é—®é¢˜</h2>

<h3 id="ç¼–è¯‘æ—¶æŠ¥é”™">ç¼–è¯‘æ—¶æŠ¥é”™</h3>

<p>ç¼–è¯‘è¿‡ç¨‹ä¸­é‡åˆ°è¿‡è‹¥å¹²ç§æŠ¥é”™ï¼Œå…¶å®éƒ½æ˜¯ç”±äº libarchive é€ æˆçš„ï¼Œæ­£ç¡®å®‰è£…å¹¶é…ç½® include å’Œ lib ç›®å½•å³å¯ã€‚</p>

<p>æŠ¥é”™ 1ï¼š</p>

<div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>zeal/src/core/extractor.cpp:27: error: 'archive.h' file not found
#include &lt;archive.h&gt;
         ^
</code></pre></div></div>

<p>æŠ¥é”™ 2ï¼š</p>

<div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>Undefined symbols for architecture x86_64:
"_archive_entry_pathname", referenced from:
Zeal::Core::Extractor::extract(QString const&amp;, QString const&amp;, QString const&amp;) in extractor.o
"_archive_entry_set_pathname", referenced from:
Zeal::Core::Extractor::extract(QString const&amp;, QString const&amp;, QString const&amp;) in extractor.o
"_archive_error_string", referenced from:
Zeal::Core::Extractor::extract(QString const&amp;, QString const&amp;, QString const&amp;) in extractor.o
"_archive_filter_bytes", referenced from:
Zeal::Core::Extractor::progressCallback(void*) in extractor.o
"_archive_read_extract", referenced from:
Zeal::Core::Extractor::extract(QString const&amp;, QString const&amp;, QString const&amp;) in extractor.o
"_archive_read_extract_set_progress_callback", referenced from:
Zeal::Core::Extractor::extract(QString const&amp;, QString const&amp;, QString const&amp;) in extractor.o
"_archive_read_free", referenced from:
Zeal::Core::Extractor::extract(QString const&amp;, QString const&amp;, QString const&amp;) in extractor.o
"_archive_read_new", referenced from:
Zeal::Core::Extractor::extract(QString const&amp;, QString const&amp;, QString const&amp;) in extractor.o
"_archive_read_next_header", referenced from:
Zeal::Core::Extractor::extract(QString const&amp;, QString const&amp;, QString const&amp;) in extractor.o
"_archive_read_open_filename", referenced from:
Zeal::Core::Extractor::extract(QString const&amp;, QString const&amp;, QString const&amp;) in extractor.o
"_archive_read_support_filter_all", referenced from:
Zeal::Core::Extractor::extract(QString const&amp;, QString const&amp;, QString const&amp;) in extractor.o
"_archive_read_support_format_all", referenced from:
Zeal::Core::Extractor::extract(QString const&amp;, QString const&amp;, QString const&amp;) in extractor.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)
make[1]: *** [../bin/Zeal.app/Contents/MacOS/Zeal] Error 1
make: *** [sub-src-make_first-ordered] Error 2
23:47:44: è¿›ç¨‹"/usr/bin/make"é€€å‡ºï¼Œé€€å‡ºä»£ç  2 ã€‚
Error while building/deploying project zeal (kit: Desktop Qt 5.5.0 clang 64bit)
When executing step "Make"
23:47:44: Elapsed time: 00:01.
</code></pre></div></div>

<p><strong>è§£å†³æ–¹æ³•ï¼š</strong> å®‰è£… libarchiveï¼Œå°†æ ¹æ®ä¸Šé¢ç¼–è¯‘æ­¥éª¤ 4 é‡Œçš„è¯´æ˜ä¿®æ”¹ src/core/core.pri æ–‡ä»¶ã€‚</p>

<p>å…³äºè¿™ä¸ªé—®é¢˜çš„è®¨è®ºè§ <a href="https://github.com/zealdocs/zeal/pull/372">zealdocs/zeal#372</a>ã€‚</p>

<h3 id="æ‰“åŒ…æ—¶æŠ¥é”™">æ‰“åŒ…æ—¶æŠ¥é”™</h3>

<p>åœ¨æ‰“åŒ… dmg æ–‡ä»¶çš„è¿‡ç¨‹ä¸­ä¼šæç¤º ERRORï¼Œè¿™ä¸ªè²Œä¼¼ä¸å½±å“ï¼Œç›´æ¥å¿½ç•¥å°±å¥½ã€‚</p>

<div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code>ERROR: no file at "/opt/local/lib/mysql55/mysql/libmysqlclient.18.dylib"
ERROR: no file at "/usr/local/lib/libpq.5.dylib"
</code></pre></div></div>

<p><strong>è§£å†³æ–¹æ³•ï¼š</strong> å¿½ç•¥ã€‚</p>

<p>æ„Ÿè°¢ Dashï¼ŒDash å†è§ã€‚</p>

:ET